kubernetes/deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: microservice-sample-v1
  namespace: $NAMESPACE
  labels:
    io.kompose.service: microservice-sample-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: microservice-sample-v1
  template:
    metadata:
      labels:
        io.kompose.service: microservice-sample-v1
      annotations:
        git.url: $GIT_URL
        git.branch: $GIT_BRANCH
        git.commit: $GIT_COMMIT
        jenkins.url: $JENKINS_URL
        jenkins.build.tag: $BUILD_TAG
    spec:
      containers:
      - name: microservice-sample-v1
        image: $IMAGE_ID
        command: [ "/entrypoint.sh" ]
        args: ["$ENTRYPOINT_HOST", "$ENTRYPOINT_PORT"]
        readinessProbe:
            httpGet:
                path: /actuator/health
                port: 7777
            initialDelaySeconds: 60
            periodSeconds: 15
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
            limits:
                memory: 1Gi
                cpu: 1
            requests:
                memory: 1Gi
                cpu: 1
        imagePullPolicy: Always
      restartPolicy: Always
      securityContext: {}
      hostname: microservice-sample-v1
