kubernetes/ingress.yaml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: microservice-sample-v1
  namespace: $NAMESPACE
  labels:
    io.kompose.service: microservice-sample-v1
spec:
  rules:
  - host: $INGRESS_HOST_URL
    http:
      paths:
      - backend:
          serviceName: microservice-sample-v1
          servicePort: 8080
